--- a/text/acknowledgements.tex
+++ b/text/acknowledgements.tex
@@ -1,7 +1,11 @@
 %\subsection*{Personal}
 
-So long, and thanks for all the fish.
+%So long, and thanks for all the fish.
 
-%\subsection*{Institutional}
+\subsection*{Institutional}
 
-%If you want to separate out your thanks for funding and institutional support, I don't think there's any rule against it.  Of course, you could also just remove the subsections and do one big traditional acknowledgement section.
+I am very grateful for the institutional support that made this thesis possible, and extend my thanks to the EPSRC Centre for Doctoral Training in Theory and Modelling in Chemical Sciences (grant EP/L015722/1), to the UK Materials and Molecular Modelling Hub for computational resources (grant EP/P020194/1) and to the AWE.
+
+\vspace{\baselineskip}
+
+\noindent Ministry of Defence \copyright British Crown Copyright 2020/AWE
