--- a/text/general_networks.tex
+++ b/text/general_networks.tex
@@ -130,6 +130,7 @@ However, network science has a well\--adopted metric for measuring node degree c
 This chapter therefore provides a good opportunity to replace the empirical \aw{} law with a concrete measure, and it will be shown in section \ref{s:assortativity} that there is a mapping between the \aw{} parameter and the assortativity.
 
 \subsection{Deficiencies in the Aboav\--Weaire Law}
+\label{s:awdeficiencies}
 
 For all its perceived success in characterising amorphous materials, the \aw{} law suffers from several deficiencies, some of them academic and others practical.
 To begin with, it remains the case that despite numerous efforts \cite{Lambert1981,Kumar1994,Blanc1979,Rivier1985,Peshkin1991,Chiu1994} there is no satisfactory theoretical justification behind the \aw{} law; the various attempts and their drawbacks summarised excellently by Mason \etal{} \cite{Mason2012}.
